# genome_info

./: .gitignore  README.md  app.py  index.html  pyproject.toml
static/css/: style.css
static/js/: app.js
